[package]
name = "nod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.3"

[profile.release]
incremental = true
lto = true
